--- a/src/scss/_modules/line_up.scss
+++ b/src/scss/_modules/line_up.scss
@@ -77,6 +77,9 @@
             +.item-detail {
               margin-top: 1.2em;
             }
+            .name, .price {
+              display: block;
+            }
             .name {
               text-decoration: underline;
               line-height: math.div(43,24);
