バナー追加

--- a/src/pug/_data/data.pug
+++ b/src/pug/_data/data.pug
@@ -1,18 +1,18 @@
 -
   // webP変換後、falseに変更する
-  let devMode = false
+  let devMode = false;
+
+  const shop_bunner = '';
 
   const main = {
     lead: ''
   }
-
   const contents = {
     online_link: {
       text: 'ONLINE STORE',
       url:'adastriaapp://items?dispNo=0000100017_002005079&orderBy=00'
     }
   }
-
   const profile = {
     chara: [
       '本名はキティ・ホワイト。生まれた場所はイギリス ロンドンの郊外。身長はりんご５個分。体重はりんご３個分。明るくてやさしい女のコ。',
