--- a/src/pug/_modules/footer.pug
+++ b/src/pug/_modules/footer.pug
@@ -7,6 +7,8 @@ footer.footer#footer
     .back_to: +back_to
     .collabo_en: +collabo_en
   .absolute.absolute_2
+    .bnr_wrapper
+      a.bnr_button.notoCjkM(href=shop_bunner, target='_blank', rel='noopener') 展開店舗はこちら
     a.clip_logo: +clip_logo
     .links
       -for( let i = 0; i < footer.links.length; i++ )
