--- a/src/pug/_modules/line_up.pug
+++ b/src/pug/_modules/line_up.pug
@@ -61,3 +61,8 @@ section.line_up#line_up
         +item(18)
 
   +online-btn
+  .line_up-bnr
+    +webPJpg(`${IMG_DIR}line_up/`,`shop_bnr`, `shop_bnr`, devMode)
+    .btn
+      a.bnr_button.notoCjkM(href=shop_bunner, target='_blank', rel='noopener') 展開店舗はこちら
+        +arrow
