--- a/src/pug/_data/data.pug
+++ b/src/pug/_data/data.pug
@@ -2,7 +2,7 @@
   // webP変換後、falseに変更する
   let devMode = false;
 
-  const shop_bunner = '';
+  const shop_bunner = 'https://www.dot-st.com/studioclip/info/news/?news_id=2258&brand_id=0000100017';
 
   const main = {
     lead: ''
