headr タイトル修正

--- a/src/pug/_layout/head.pug
+++ b/src/pug/_layout/head.pug
@@ -1,6 +1,6 @@
 -
   const meta = {
-    title : 'studio CLIP meets HELLO KITTY | and st',
+    title : 'studio CLIP meets HELLO KITTY - サンリオキャラクターズ コラボ | and st',
     description: 'studio CLIPだけの特別コラボ。70〜80’sに夢中になったサンリオキャラクターズの表情をよみがえらせて、新しいのに懐かしいファンシーグッズを作りました。',
     type: 'website',
     ogPath: `https://www.dot-st.com${IMG_DIR}og.png?${now.getTime()}`
